2009-07-04 Maximilien Cuony
    * Removing warning when erasing saved password
    * FS#305
    * FS#314
    * FS#315
    * FS#317
    * Old api disabled
    * FS#318
    * Improved inline size
    * !FS#313
    * Begining the assistant

2009-06-21 Maximilien Cuony
    * 0.7.6 released !
    * Autodecrypting multi inline encrypted mail

2009-06-20 Maximilien Cuony
    * FS#170
    * Cleaning locales : +el vi, -po sv bn nb nb-no sk
    * FS#292
    * FS#297 (http://eprint.iacr.org/2009/259.pdf)

2009-06-18 Maximilien Cuony
    * New website
    * Don't ask twice for download key
    * FS#301
    * FS#302

2009-06-05 Maximilien Cuony
    * FS#284

2009-06-04 Maximilien Cuony
    * FS#294
    * FS#295
    * FS#256
    * FS#257

2009-05-25 Maximilien Cuony
    * FS#253

2009-05-24 Maximilien Cuony
    * FS#271
    * FS#277
    * FS#279
    * FS#270
    * FS#276
    * FS#275
    * FS#252

2009-03-06 Maximilien Cuony
    * 0.7.5 packed, and uploaded to the server !

2009-03-06 Maximilien Cuony
    * Gmail working again

2009-02-15 Maximilien Cuony
    * 0.7.4 packed, and uploaded to the server !
    * Adding Romanian, Esperanto, Slovak locates

2009-02-14 Maximilien Cuony
    * Fixing gmails problem (mails not parsed)
    * Fixing gmails problem (mails sending)
    * FS#241
    * FS#245
    * FS#248 (no more wrap system on webmails)
    * Improving mail detection

2009-02-11 Maximilien Cuony
    * New gmail interface
    * Smaller editor

2009-02-10 Maximilien Cuony
    * FS#246
    * FS#240

2009-02-09 Maximilien Cuony
    * Fix problem with inline decryption
    * Fixed some problem with compose buttons

2009-02-08 Maximilien Cuony
    * 0.7.3 packed, and uploaded to the server !
    * Small bugs fixed

2009-02-07 Maximilien Cuony
    * Manage encrypted attachements and subpart

2009-02-06 Maximilien Cuony
    * Allow importing private key with the keymananger
    * New mime decoder

2009-02-05 Maximilien Cuony
    * Gmail working again
    * FS#217
    * FS#229