@@ -74,7 +74,12 @@
     background-position: right top;
     background-repeat: no-repeat;
 
+    color: #3366FF;
+
 }
+
+
+
 
 .link {
     color: #3333FF;
